X3 C++ PluginFramework

2011-04-29

    * FileUtility: Using CopyFileW for coping small file on Win7 instead of calling SHFileOperationW.
    * LogWriter: Not call CopyLogFilesToServer() when error occurred by default.
    * Add a test case for Ix_FileUtility.

------v1.0.8------

2011-02-28

    * FileUtility: Add FOF_SILENT flag for SHFileOperationW.
    * LogManager: Avoid reenter in WriteLog.
    * LogWriter: Hide progress UI in CopyLogFilesToServer.
    * LogHelper.h: Rename the variable 'buf' to '_buf'.

2011-02-24

    * Set modified flag only if actually changed in Cx_XmlSection::SetXXX().
    * Check NULL string in Cx_ConfigXml::GetSection().

    * LogWriter: Copy log files to server if error message has fired.

2011-02-21

    * Replace "\n" to "\\n " in LogWriter plugin. Add replace function in ctrim.h

------v1.0.7------

2011-02-18

    * Add delay-load comments.
    * Fix Cx_PluginLoader::LoadPluginOrDelay.
    * Not call CoUninitialize if another plugin (eg. StringTable) is using ConfigXml plugin.

2011-02-16

    * Fix PluginManager:
        Avoid plugin loading when a plugin is unloading.
        Counting even a plugin is not loaded in InitializePlugins.
        Not call ReleaseModule if a plugin is not loaded in UnloadPlugins.
        Force load ConfigXml plugin if the class file is about to loaded.

------v1.0.6------

2011-02-14

    * Compile and fix projects using MinGW and GCC 4.5.1.
    * Add Code::Blocks 10.05 projects (converted from x3_vc60).
    * Support MFC dialog application and console application in cppunit test applications.
    * Rename MSXML DOM namespace in ConfigXml plugin.

    * PluginManager 1.0.0.5:
    * PluginManager\Cx_PluginLoader.cpp: Ignore folders in GetPluginIndex. Rewrite LoadPlugin().

    * Add L before the wide character like L'.'

------v1.0.5------

2011-02-08

    * PluginManager: Implement Ix_PluginDelayLoad to support delay-load feature for observer plugins.